Updated README/Cargo.toml with one-line descriptions for all

--- a/rdftk_graph/Cargo.toml
+++ b/rdftk_graph/Cargo.toml
@@ -3,7 +3,7 @@ name = "rdftk_graph"
 version = "0.1.0"
 authors = ["Simon Johnston <johnstonskj@gmail.com>"]
 edition = "2018"
-description = ""
+description = "Traits which describe the capabilities of different Graph types"
 documentation = "https://docs.rs/rdftk_core/"
 repository = "https://github.com/johnstonskj/rust-rdftk.git"
 license = "MIT"
