--- a/rdftk_io/Cargo.toml
+++ b/rdftk_io/Cargo.toml
@@ -3,7 +3,7 @@ name = "rdftk_io"
 version = "0.1.0"
 authors = ["Simon Johnston <johnstonskj@gmail.com>"]
 edition = "2018"
-description = ""
+description = "Traits for reading/wtiting Statements and Graphs as well as implementations for common file formats"
 documentation = "https://docs.rs/rdftk_core/"
 repository = "https://github.com/johnstonskj/rust-rdftk.git"
 license = "MIT"
