--- a/rdftk_iri/Cargo.toml
+++ b/rdftk_iri/Cargo.toml
@@ -3,7 +3,7 @@ name = "rdftk_iri"
 version = "0.1.0"
 authors = ["Simon Johnston <johnstonskj@gmail.com>"]
 edition = "2018"
-description = ""
+description = "Another implementation of the IRI/URI specifications"
 documentation = "https://docs.rs/rdftk_core/"
 repository = "https://github.com/johnstonskj/rust-rdftk.git"
 license = "MIT"
