--- a/rdftk_memgraph/Cargo.toml
+++ b/rdftk_memgraph/Cargo.toml
@@ -3,7 +3,7 @@ name = "rdftk_memgraph"
 version = "0.1.0"
 authors = ["Simon Johnston <johnstonskj@gmail.com>"]
 edition = "2018"
-description = ""
+description = "An implementation of the`Graph traits for simple in-memory cases"
 documentation = "https://docs.rs/rdftk_core/"
 repository = "https://github.com/johnstonskj/rust-rdftk.git"
 license = "MIT"
