--- a/rdftk_query/Cargo.toml
+++ b/rdftk_query/Cargo.toml
@@ -3,7 +3,7 @@ name = "rdftk_query"
 version = "0.1.0"
 authors = ["Simon Johnston <johnstonskj@gmail.com>"]
 edition = "2018"
-description = ""
+description = "Placeholder for query API and SPARQL support"
 documentation = "https://docs.rs/rdftk_core/"
 repository = "https://github.com/johnstonskj/rust-rdftk.git"
 license = "MIT"
