Scrubbed URI --> IRI

--- a/rdftk_names/Cargo.toml
+++ b/rdftk_names/Cargo.toml
@@ -3,7 +3,7 @@ name = "rdftk_names"
 version = "0.1.0"
 authors = ["Simon Johnston <johnstonskj@gmail.com>"]
 edition = "2018"
-description = "Provides a set of modules that contain the URIs and QName strings for commonly used vocabularies"
+description = "Provides a set of modules that contain the IRIs and QName strings for commonly used vocabularies"
 documentation = "https://docs.rs/rdftk_core/"
 repository = "https://github.com/johnstonskj/rust-rdftk.git"
 license = "MIT"
