--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -17,7 +17,10 @@ jobs:
           mdbook-version: '0.3.7'
           # mdbook-version: 'latest'
 
-      - run: mdbook build
+      - name: Build
+        with:
+          path: ./book
+        run: mdbook build
 
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v3
