--- a/rdftk_names/Cargo.toml
+++ b/rdftk_names/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "rdftk_names"
-version = "0.1.2"
+version = "0.1.3"
 authors = ["Simon Johnston <johnstonskj@gmail.com>"]
 edition = "2018"
 description = "Provides a set of modules that contain the IRIs and QName strings for commonly used vocabularies"
@@ -16,5 +16,6 @@ publish = true
 targets = ["x86_64-unknown-linux-gnu"]
 
 [dependencies]
+lazy_static = "1.4.0"
 rdftk_iri = { version = "0.1.0", path = "../rdftk_iri" }
 paste = "0.1.12"
