--- a/rdftk_iri/Cargo.toml
+++ b/rdftk_iri/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "rdftk_iri"
-version = "0.1.0"
+version = "0.1.1"
 authors = ["Simon Johnston <johnstonskj@gmail.com>"]
 edition = "2018"
 description = "Another implementation of the IRI/URI specifications"
@@ -16,7 +16,8 @@ publish = true
 targets = ["x86_64-unknown-linux-gnu"]
 
 [dependencies]
-unique_id = "0.1.3"
 error-chain = "0.12.2"
 lazy_static = "1.4.0"
+nom = "5.1.1"
 regex = "1.3.7"
+unique_id = "0.1.3"
