--- a/rdftk_skos/Cargo.toml
+++ b/rdftk_skos/Cargo.toml
@@ -16,6 +16,7 @@ publish = true
 targets = ["x86_64-unknown-linux-gnu"]
 
 [dependencies]
+lazy_static = "1.4.0"
 paste = "0.1.12"
 rdftk_io = { version = "0.1.0", path = "../rdftk_io" }
 rdftk_iri = { version = "0.1.0", path = "../rdftk_iri" }
