--- a/rdftk_graph/Cargo.toml
+++ b/rdftk_graph/Cargo.toml
@@ -1,8 +1,10 @@
 [package]
 name = "rdftk_graph"
+description = "Deprecated - moved to rdftk_core"
 version = "0.1.1"
 authors = ["Simon Johnston <johnstonskj@gmail.com>"]
 edition = "2018"
+license = "MIT"
 readme = "README.md"
 publish = true
 
