--- a/rdftk_iri/Cargo.toml
+++ b/rdftk_iri/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "rdftk_iri"
-version = "0.1.1"
+version = "0.1.2"
 authors = ["Simon Johnston <johnstonskj@gmail.com>"]
 edition = "2018"
 description = "Another implementation of the IRI/URI specifications"
@@ -15,9 +15,19 @@ publish = true
 # and only builds that target for documentation.
 targets = ["x86_64-unknown-linux-gnu"]
 
+[features]
+default = ["builder", "path_iri", "uuid_iri"]
+builder = []
+path_iri = []
+uuid_iri = ["uuid"]
+pre_name = []
+new_parser = ["nom"]
+
 [dependencies]
 error-chain = "0.12.2"
 lazy_static = "1.4.0"
-nom = "5.1.1"
 regex = "1.3.7"
 unique_id = "0.1.3"
+
+nom = { version = "5.1.1", optional = true }
+uuid = { version = "0.8.1", optional = true }
