--- a/rdftk_iri/Cargo.toml
+++ b/rdftk_iri/Cargo.toml
@@ -28,3 +28,8 @@ regex = "1.3.7"
 unique_id = "0.1.3"
 
 uuid = { version = "0.8.1", optional = true }
+
+[dev-dependencies.cargo-husky]
+version = "1"
+default-features = false # Disable features which are enabled by default
+features = ["precommit-hook", "run-cargo-fmt", "run-cargo-test" ]
