--- a/rdftk_iri/Cargo.toml
+++ b/rdftk_iri/Cargo.toml
@@ -29,6 +29,9 @@ unique_id = "0.1.3"
 
 uuid = { version = "0.8.1", optional = true }
 
+[dev-dependencies]
+proptest = "0.10.1"
+
 [dev-dependencies.cargo-husky]
 version = "1"
 default-features = false # Disable features which are enabled by default
