--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ members = [
     "rdftk_iri",
     "rdftk_memgraph",
     "rdftk_names",
+    "rdftk_ontology",
     "rdftk_query",
     "rdftk_skos",
 ]
