Updated all crate descriptions; synced the text and used the new badges where possible.

--- a/rdftk_core/Cargo.toml
+++ b/rdftk_core/Cargo.toml
@@ -3,7 +3,7 @@ name = "rdftk_core"
 version = "0.1.10"
 authors = ["Simon Johnston <johnstonskj@gmail.com>"]
 edition = "2018"
-description = "The core data model; concrete implementations for Statements and Literals, along with a concrete Resource type  that provides a builder-like experience for models."
+description = "This crate provides the core RDF data model; concrete implementations for Statements and Literals, along with a Resource type that provides a builder-like experience for models."
 documentation = "https://docs.rs/rdftk_core/"
 repository = "https://github.com/johnstonskj/rust-rdftk.git"
 license = "MIT"
