--- a/rdftk_memgraph/Cargo.toml
+++ b/rdftk_memgraph/Cargo.toml
@@ -3,7 +3,7 @@ name = "rdftk_memgraph"
 version = "0.1.6"
 authors = ["Simon Johnston <johnstonskj@gmail.com>"]
 edition = "2018"
-description = "An implementation of the`Graph traits for simple in-memory cases"
+description = "This crate provides an implementation of the Graph traits from rdftk_core::graph for simple in-memory usage."
 documentation = "https://docs.rs/rdftk_core/"
 repository = "https://github.com/johnstonskj/rust-rdftk.git"
 license = "MIT"
