--- a/rdftk_ontology/Cargo.toml
+++ b/rdftk_ontology/Cargo.toml
@@ -3,7 +3,7 @@ name = "rdftk_ontology"
 version = "0.1.0-pre"
 authors = ["Simon Johnston <johnstonskj@gmail.com>"]
 edition = "2018"
-description = "Placeholder for an Ontology API"
+description = "This crate provides a data model for creating ontologies using RDF Schema and OWL 2 Web Ontology Language (OWL)."
 documentation = "https://docs.rs/rdftk_ontology/"
 repository = "https://github.com/johnstonskj/rust-rdftk.git"
 license = "MIT"
