--- a/rdftk_names/Cargo.toml
+++ b/rdftk_names/Cargo.toml
@@ -3,7 +3,7 @@ name = "rdftk_names"
 version = "0.1.7"
 authors = ["Simon Johnston <johnstonskj@gmail.com>"]
 edition = "2018"
-description = "Provides a set of modules that contain the IRIs and QName strings for commonly used vocabularies"
+description = "This crate provides a set of modules that contain the `IRI`s and `QName` strings for commonly used vocabularies. It also provides macro support for defining new namespaces in the same style as this library."
 documentation = "https://docs.rs/rdftk_core/"
 repository = "https://github.com/johnstonskj/rust-rdftk.git"
 license = "MIT"
