--- a/rdftk_skos/Cargo.toml
+++ b/rdftk_skos/Cargo.toml
@@ -3,7 +3,7 @@ name = "rdftk_skos"
 version = "0.1.24"
 authors = ["Simon Johnston <johnstonskj@gmail.com>"]
 edition = "2018"
-description = "A data model with RDF support for the Simple Knowledge Organization System (SKOS) vocabulary."
+description = "This crate provides a data model with RDF support for the Simple Knowledge Organization System (SKOS) vocabulary."
 documentation = "https://docs.rs/rdftk_skos/"
 repository = "https://github.com/johnstonskj/rust-rdftk.git"
 license = "MIT"
