--- a/rdftk_memgraph/Cargo.toml
+++ b/rdftk_memgraph/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "rdftk_memgraph"
-version = "0.1.6"
+version = "0.1.8"
 authors = ["Simon Johnston <johnstonskj@gmail.com>"]
 edition = "2018"
 description = "This crate provides an implementation of the Graph traits from rdftk_core::graph for simple in-memory usage."
@@ -16,6 +16,11 @@ publish = true
 targets = ["x86_64-unknown-linux-gnu"]
 
 [dependencies]
-rdftk_iri = { version = "0.1.2", path = "../rdftk_iri" }
-rdftk_core = { version = "0.1.7", path = "../rdftk_core" }
-rdftk_names = { version = "0.1.4", path = "../rdftk_names" }
+rdftk_iri = { version = "0.1.4", path = "../rdftk_iri" }
+rdftk_core = { version = "0.1.11", path = "../rdftk_core" }
+rdftk_names = { version = "0.1.7", path = "../rdftk_names" }
+
+[dev-dependencies.cargo-husky]
+version = "1"
+default-features = false # Disable features which are enabled by default
+features = ["precommit-hook", "run-cargo-fmt", "run-cargo-test" ]
