--- a/rdftk_core/Cargo.toml
+++ b/rdftk_core/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "rdftk_core"
-version = "0.1.14"
+version = "0.2.0"
 authors = ["Simon Johnston <johnstonskj@gmail.com>"]
 edition = "2018"
 description = "This crate provides the core RDF data model; concrete implementations for Statements and Literals, along with a Resource type that provides a builder-like experience for models."
@@ -16,7 +16,8 @@ publish = true
 targets = ["x86_64-unknown-linux-gnu"]
 
 [dependencies]
-error-chain = "0.12.2"
-unique_id = "0.1.3"
+chrono = "0.4"
+error-chain = "0.12"
+unique_id = "0.1"
 rdftk_iri = { version = "0.1", path = "../rdftk_iri" }
 rdftk_names = { version = "0.1", path = "../rdftk_names" }
