--- a/rdftk_io/Cargo.toml
+++ b/rdftk_io/Cargo.toml
@@ -20,17 +20,20 @@ json = ["serde_json"]
 json-ld = ["serde_json"]
 n3 = []
 nq = []
-nt = []
+nt = ["pest", "pest_derive"]
 trig = []
-turtle = []
+turtle = ["pest", "pest_derive"]
 xml = ["xml-rs", "rdftk_names"]
 
 [dependencies]
 error-chain = "0.12.2"
+log = "0.4"
 rdftk_core = { version = "0.2", path = "../rdftk_core" }
 rdftk_iri = { version = "0.1", path = "../rdftk_iri" }
 
-
+# feature-dependencies
+pest = { version = "2.1", optional = true }
+pest_derive = { version = "2.1", optional = true }
 rdftk_names = { version = "0.1", path = "../rdftk_names", optional = true }
 serde_json = { version = "1.0.64", optional = true }
 xml-rs = { version = "0.8.3", optional = true }
