--- a/rdftk_core/Cargo.toml
+++ b/rdftk_core/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "rdftk_core"
-version = "0.2.0"
+version = "0.2.2"
 authors = ["Simon Johnston <johnstonskj@gmail.com>"]
 edition = "2018"
 description = "This crate provides the core RDF data model; concrete implementations for Statements and Literals, along with a Resource type that provides a builder-like experience for models."
@@ -18,6 +18,7 @@ targets = ["x86_64-unknown-linux-gnu"]
 [dependencies]
 chrono = "0.4"
 error-chain = "0.12"
-unique_id = "0.1"
 rdftk_iri = { version = "0.1", path = "../rdftk_iri" }
 rdftk_names = { version = "0.1", path = "../rdftk_names" }
+unique_id = "0.1"
+uuid = { version = "0.8", features = ["v4"] }
