--- a/rdftk_memgraph/Cargo.toml
+++ b/rdftk_memgraph/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "rdftk_memgraph"
-version = "0.1.10"
+version = "0.1.11"
 authors = ["Simon Johnston <johnstonskj@gmail.com>"]
 edition = "2018"
 description = "This crate provides an implementation of the Graph traits from rdftk_core::graph for simple in-memory usage."
@@ -16,6 +16,7 @@ publish = true
 targets = ["x86_64-unknown-linux-gnu"]
 
 [dependencies]
+lazy_static = "1.4"
 rdftk_iri = { version = "0.1", path = "../rdftk_iri" }
 rdftk_core = { version = "0.2", path = "../rdftk_core" }
 rdftk_names = { version = "0.1", path = "../rdftk_names" }
