--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 ## ------------------------------------------------------------------------------------------------
 # Files created by development tools
+**/.DS_store
 /.idea/
 *.iml
 **/*.rs~
