--- a/rdftk_iri/Cargo.toml
+++ b/rdftk_iri/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "rdftk_iri"
-version = "0.1.8"
+version = "0.1.9"
 authors = ["Simon Johnston <johnstonskj@gmail.com>"]
 edition = "2018"
 description = "This crate provides an implementation of the IRI and URI specifications."
@@ -16,8 +16,9 @@ publish = true
 targets = ["x86_64-unknown-linux-gnu"]
 
 [features]
-default = ["builder", "path_iri", "uuid_iri"]
+default = ["builder", "genid", "path_iri", "uuid_iri"]
 builder = []
+genid = ["uuid"]
 path_iri = []
 uuid_iri = ["uuid"]
 
@@ -30,7 +31,10 @@ unique_id = "0.1.3"
 uuid = { version = "0.8.1", optional = true }
 
 [dev-dependencies]
-proptest = "0.10.1"
+proptest = "1.0.0"
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
+urlencoding = "1.3"
 
 [dev-dependencies.cargo-husky]
 version = "1"
