--- a/rdftk_ontology/Cargo.toml
+++ b/rdftk_ontology/Cargo.toml
@@ -17,6 +17,6 @@ targets = ["x86_64-unknown-linux-gnu"]
 
 [dependencies]
 lazy_static = "1.4.0"
-rdftk_core = { version = "0.2", path = "../rdftk_core" }
+rdftk_core = { version = "0.3.0-pre", path = "../rdftk_core" }
 rdftk_iri = { version = "0.1", path = "../rdftk_iri" }
 rdftk_names = { version = "0.1", path = "../rdftk_names" }
