--- a/rdftk_query/Cargo.toml
+++ b/rdftk_query/Cargo.toml
@@ -17,4 +17,4 @@ targets = ["x86_64-unknown-linux-gnu"]
 
 [dependencies]
 error-chain = "0.12.2"
-rdftk_core = { version = "0.2", path = "../rdftk_core" }
+rdftk_core = { version = "0.3.0-pre", path = "../rdftk_core" }
