* The abstract RDF API, described in module 'model', is now entirely trait based. * An implementation, in module 'simple', provides concrete in-memory types. * Added a new type LanguageTag to model these values more completely. * Added notion of features which denote capabilities supported by data sets, graphs, and statements implementations.

--- a/rdftk_core/Cargo.toml
+++ b/rdftk_core/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "rdftk_core"
-version = "0.3.0-pre"
+version = "0.3.0"
 authors = ["Simon Johnston <johnstonskj@gmail.com>"]
 edition = "2018"
 description = "This crate provides the core RDF data model; concrete implementations for Statements and Literals, along with a Resource type that provides a builder-like experience for models."
@@ -31,3 +31,6 @@ unique_id = "0.1"
 uuid = { version = "0.8", features = ["v4"] }
 
 chrono = { version = "0.4", optional = true }
+
+[dev-dependencies]
+parameterized = "0.3.1"
