--- a/rdftk_query/Cargo.toml
+++ b/rdftk_query/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "rdftk_query"
-version = "0.1.2"
+version = "0.1.3"
 authors = ["Simon Johnston <johnstonskj@gmail.com>"]
 edition = "2018"
 description = "This crate provides a placeholder for a query API and the SPARQL Query Language for RDF support."
@@ -16,5 +16,5 @@ publish = true
 targets = ["x86_64-unknown-linux-gnu"]
 
 [dependencies]
-error-chain = "0.12.2"
-rdftk_core = { version = "0.3.0-pre", path = "../rdftk_core" }
+error-chain = "0.12"
+rdftk_core = { version = "0.3", path = "../rdftk_core" }
