--- a/rdftk_io/Cargo.toml
+++ b/rdftk_io/Cargo.toml
@@ -45,3 +45,4 @@ xml-rs = { version = "0.8", optional = true }
 env_logger = "0.9.1"
 pretty_assertions = "1.3.0"
 pretty_env_logger = "0.4"
+indoc = "1.0.7"
