--- a/rdftk_io/Cargo.toml
+++ b/rdftk_io/Cargo.toml
@@ -14,7 +14,7 @@ publish = true
 targets = ["x86_64-unknown-linux-gnu"]
 
 [features]
-default = ["json", "n3", "nq", "nt", "turtle", "xml"]
+default = ["dot", "json", "json-ld", "n3", "nq", "nt", "trig", "turtle", "xml"]
 dot = []
 json = ["serde_json"]
 json-ld = ["serde_json"]
@@ -28,6 +28,7 @@ xml = ["xml-rs", "rdftk_names"]
 [dependencies]
 lazy_static = "1.4"
 log = "0.4"
+objio = "0.1.1"
 rdftk_core = { version = "0.4.2", path = "../rdftk_core" }
 rdftk_iri = { version = "0.2.2", path = "../rdftk_iri" }
 regex = "1.5"
