--- a/rdftk_skos/Cargo.toml
+++ b/rdftk_skos/Cargo.toml
@@ -22,17 +22,18 @@ documentation = ["somedoc"]
 [dependencies]
 lazy_static = "1.4.0"
 paste = "1.0.2"
-rdftk_io = { version = "0.2", path = "../rdftk_io" }
-rdftk_iri = { version = "0.2", path = "../rdftk_iri" }
-rdftk_core = { version = "0.3.0-pre", path = "../rdftk_core" }
-rdftk_names = { version = "0.1", path = "../rdftk_names" }
+rdftk_io = { version = "0.3", path = "../rdftk_io" }
+rdftk_iri = { version = "0.2.1", path = "../rdftk_iri" }
+rdftk_core = { version = "0.4.1", path = "../rdftk_core" }
+rdftk_names = { version = "0.2.1", path = "../rdftk_names" }
 
 somedoc = { version = "0.2.9", optional = true }
 
 [dev-dependencies]
-pretty_assertions = "0.7.1"
+pretty_assertions = "1.4"
 
 [dev-dependencies.cargo-husky]
 version = "1"
 default-features = false # Disable features which are enabled by default
-features = ["precommit-hook", "run-cargo-fmt", "run-cargo-test" ]
+features = ["precommit-hook", "run-cargo-fmt", "run-cargo-test" 
+]
