style: fix cfg's and remove empty comments

--- a/rdftk_io/Cargo.toml
+++ b/rdftk_io/Cargo.toml
@@ -18,10 +18,10 @@ default = ["dot", "json", "json-ld", "n3", "nq", "nt", "trig", "turtle", "xml"]
 dot = []
 json = ["serde_json"]
 json-ld = ["serde_json"]
-n3 = []
+n3 = ["pest", "pest_derive"]
 nq = ["pest", "pest_derive"]
 nt = ["pest", "pest_derive"]
-trig = []
+trig = ["pest", "pest_derive"]
 turtle = ["pest", "pest_derive"]
 xml = ["xml-rs", "rdftk_names"]
 
